fixing spacing issues,.

--- a/app/assets/stylesheets/questions-page.scss
+++ b/app/assets/stylesheets/questions-page.scss
@@ -122,7 +122,6 @@
 .image-frame {
   width: 100%;
   background-color: #212124;
-  margin-bottom: 50px;
   padding-top: 20px;
   height: 90vh;
   position: relative;
@@ -306,7 +305,7 @@
  }
 
 .tag-prompt {
-
+  background-color: #FCFCFC;
   .checked {
     color: #419BF9;
   }
